--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     position: relative;
     background-image: url('../img/circle/circle7.png');
 }
@@ -652,6 +652,9 @@ html {
     .scroll-list {
         width: 300px;
         height: 600px;
+    }
+    .scroll-section {
+        background-attachment: fixed;
     }
     .wrapp {
         width: 600px;
